# plant-app-vpn

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sftp.rs  ssh.rs  wireguard.rs
src/auth/: AuthProvider.tsx  cognito.ts  contexto.ts  tipos.ts
src/components/: Modal.tsx  SelectorIdioma.tsx  TarjetaEquipo.tsx  modal.css  tarjeta-equipo.css
src/components/layout/: AppShell.tsx  Topbar.tsx  appshell.css  topbar.css
src/hooks/: usePermissions.ts
src/i18n/: en.ts  es.ts  fr.ts  index.ts  pt.ts
src/lib/: amplify.ts  api.ts  mensajesError.ts
src/pages/: ActivarStaff.tsx  AltaCliente.tsx  AltaEquipo.tsx  Auditoria.tsx  Dashboard.tsx  EditorPerfil.tsx  Filtros.tsx  GestionGerentes.tsx  GestionPlantillas.tsx  GestionZonas.tsx  Login.tsx  PanelErrores.tsx  TerminalSSH.tsx  TransferenciaArchivos.tsx  auth.css  dashboard.css  editor-perfil.css  lista.css  terminal-ssh.css
src/perfiles/: tipos.ts  validacion.ts
src/vpn/: conexion.ts
