[package]
name = "plant-app-vpn"
version = "0.1.0"
description = "IES Monitor Plant - App VPN (nucleo Rust)"
authors = ["IES Internacional"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77"
default-run = "plant-app-vpn"

# El binario de la app. `lib.rs` expone `run()`; `main.rs` solo lo invoca (permite reuso en móvil a futuro).
[lib]
name = "plant_app_vpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
# Diálogo nativo de abrir/guardar archivo (TransferenciaArchivos.tsx necesita una ruta LOCAL real, que un
# <input type="file"> del navegador no expone).
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# SSH puro en Rust (sin libssh2/OpenSSL nativo) — terminal SSH (6.2.2) y transporte de SFTP (6.2.3).
russh = "0.45"
russh-sftp = "2.0"
# Generación del par de llaves WireGuard del cliente (Curve25519) — el frontend nunca ve la privada.
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
base64 = "0.22"
